# file_finder

./: Cargo.toml  README.md  build.rs  config.toml
src/: cli.rs  main.rs
src/config/: mod.rs
src/search/: error.rs  mod.rs  pattern.rs  tests.rs
tests/: integration_tests.rs
